Renamed and restructured recipe files

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="rcpes/lasagna.html">Lasagna</a></li>
+      <li><a href="recipes/lasagna.html">Lasagna</a></li>
       <!-- Ensure that the paths to the html files for chicken curry and chocolate cake are correct -->
-      <li><a href="rcpes/chicken_curry.html">Chicken Curry</a></li>
-      <li><a href="rcpes/chocolate_cake.html">Chocolate Cake</a></li>
+      <li><a href="recipes/chicken_curry.html">Chicken Curry</a></li>
+      <li><a href="recipes/chocolate_cake.html">Chocolate Cake</a></li>
     </ul>
   </body>
 </html>
